Many small fixes and adjustments. Added colorShift demo.

--- a/css/hawkinsGame.css
+++ b/css/hawkinsGame.css
@@ -206,7 +206,7 @@ img {
 }
 
 .gameWin {
-    background-color: #A82E5D;;
+    background-color: #A82E5D;
 }
 
 .gameTie {
